--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-spring.neo4j.uri=bolt://localhost:7687
+spring.neo4j.uri=neo4j+s://ea206b73.databases.neo4j.io
 spring.neo4j.authentication.username=neo4j
-spring.neo4j.authentication.password=admin123
-spring.data.neo4j.database=student
+spring.neo4j.authentication.password=dJs59DZCjLE-gJy_Ztv2RKqsalVVswGn3Dojfjt5_8w
+spring.data.neo4j.database=priming
 
 logging.level.org.springframework.data.neo4j=DEBUG
+
