feat: added dependency to use gpt-api

--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,12 @@
 			<version>2.8.6</version>
 		</dependency>
 
+		<!-- ChatGPT -->
+		<dependency>
+			<groupId>com.theokanning.openai-gpt3-java</groupId>
+			<artifactId>service</artifactId>
+			<version>0.18.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
