--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,15 @@
 			<artifactId>service</artifactId>
 			<version>0.18.2</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-mongodb -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb</artifactId>
+			<version>3.1.2</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
