--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,8 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.priming</groupId>
-	<artifactId>Neo4j-with-Spring-Boot</artifactId>
+	<artifactId>Priming</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Neo4j-with-Spring-Boot</name>
-	<description>Neo4j with Spring Boot</description>
 
 	<properties>
 		<java.version>17</java.version>
