--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 # Configurações do MongoDB
-spring.data.mongodb.uri=mongodb+srv://prime:Coraline23%22@prime.0zjimdw.mongodb.net/primed?retryWrites=true&w=majority&socketTimeoutMS=60000
+spring.data.mongodb.uri=mongodb+srv://prime:Coraline23%22@prime.0zjimdw.mongodb.net/primed?retryWrites=true&w=majority&socketTimeoutMS=120000
 
 # Nome da coleção
+spring.data.mongodb.database=primeDB
+# spring.data.mongodb.port=27017
 spring.data.mongodb.collection=primeCollection
 spring.data.mongodb.socketTimeout=20000
 spring.data.mongodb.connectionTimeout=20000
